--- a/details_modelo4/details.html
+++ b/details_modelo4/details.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Nightskiin • allskiin</title>
+    <title>Men • allskiin</title>
     <link rel="stylesheet" href="details.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
 </head>
@@ -43,7 +43,7 @@
                 <div class="sneaker__figure"></div>
 
                 <div>
-                    <img src="../Tsherts-allskiin-2022/Nightskiin_preto.PNG" alt="" class="sneaker__img shows" color="#A29596" />
+                    <img src="../Tsherts-allskiin-2022/men_preto.PNG" alt="" class="sneaker__img shows" color="#A29596" />
                 </div>
 
                 <div class="sneaker__colors">
@@ -56,8 +56,8 @@
             <div class="info">
                 <div class="data">
                     <span class="data__subtitle">allskiin</span>
-                    <h1 class="data__title">Nightskiin</h1>
-                    <p class="data__description">A 'Nightskiin' é o primeiro modelo a ser feito, com técidos de ótima qualidade, 100% algodão <br>Cor: Preto / Azul escuro Estilo: aliin-2s</p>
+                    <h1 class="data__title">Men</h1>
+                    <p class="data__description">A 'Men' é o primeiro modelo a ser feito, com técidos de ótima qualidade, 100% algodão <br>Cor: Preto / Vermelho Estilo: mensiin-1s</p>
                 </div>
 
                 <div class="actions">
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 <div class="preci">
-                    <a class="preci__value">14.499,00 Kz
+                    <a class="preci__value">19.499,00 Kz
                     </a>
 
 
@@ -97,18 +97,18 @@
                             <div class="checkout">
                                 <div class="order">
                                     <h2>Confira</h2>
-                                    <h5>Order #002</h5>
+                                    <h5>Order #001</h5>
                                     <ul class="order-list">
                                         <li>
-                                            <img src="../Tsherts-allskiin-2022/Nightskiin_preto.PNG" alt="">
-                                            <h4>Nightskiin</h4>
-                                            <h5>14.499,00 Kz</h5>
+                                            <img src="../Tsherts-allskiin-2022/Men_preto.PNG" alt="">
+                                            <h4>Men</h4>
+                                            <h5>19.499,00 Kz</h5>
                                         </li>
                                     </ul>
                                     <h5>Desconto</h5>
                                     <h4>499,00 Kz</h4>
                                     <h5 class="total">Total</h5>
-                                    <h1>14.000,00 Kz</h1>
+                                    <h1>19.000,00 Kz</h1>
                                 </div>
                                 <h2>Processos</h2>
                                 <div class="payment" id="payment">
