--- a/index.html
+++ b/index.html
@@ -224,6 +224,41 @@
 
 
 
+<!----Men-------->
+    <section class="product">
+        <!--heading------------>
+        <div class="p-heading">
+            <h3>
+                M<font>e</font>n</h3>
+        </div>
+        <!--product-box-container------------>
+        <div class="product-container">
+            <div class="p-box">
+                <!--img--------->
+                <img src="Tsherts-allskiin-2022/Men_preto.PNG" alt="">
+                <ul class="icons">
+                    <a><i class="far fa-heart fa-xs"></i></a>
+                    <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
+                    <a href="details_modelo4details.html"><i class="fas fa-shopping-cart fa-xs"></i></a>
+                </ul>
+                <div class="ratting">
+                    <i class="bx bxs-star bxs-xs"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star-half"></i>
+                </div>
+                <!---details------>
+                <p>...</p>
+                <!--price----->
+                <a href="#" class="price">... AOA</a>
+                <!--buy-btn------>
+            </div>
+
+        </div>
+    </section>
+
+
 
 
 
