--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <ul class="icons">
                     <a><i class="far fa-heart fa-xs"></i></a>
                     <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href="details_modelo4details.html"><i class="fas fa-shopping-cart fa-xs"></i></a>
+                    <a href="details_modelo4/details.html"><i class="fas fa-shopping-cart fa-xs"></i></a>
                 </ul>
                 <div class="ratting">
                     <i class="bx bxs-star bxs-xs"></i>
