--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="product-container">
             <div class="p-box">
                 <!--img--------->
-                <img src="Tsherts-allskiin-2022/Nightskiin_preto.PNG" alt="" width="180px" heigth="180px">
+                <img src="Tsherts-allskiin-2022/Nightskiin_preto.PNG" alt=">
                 <ul class="icons">
                     <a><i class="far fa-heart fa-xs"></i></a>
                     <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
