--- a/men/men.html
+++ b/men/men.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Men allskiin</title>
+    <title>Men • allskiin</title>
   </head>
   <body>
     <h1>Brevimente...</h1>
