--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             <font>all</font>skiin</h3>
         <!---footer-menu---->
         <ul class="footer-menu">
-            <li><a href="#" class="bg">Homens</a></li>
+            <li><a href="men/men.html" class="bg">Homens</a></li>
             <li><a href="#" class="bg">Mulheres</a></li>
             <li><a href="#" class="bg">Crianças</a></li>
             <li><a href="#" class="bg">Tênis</a></li>
