--- a/index.html
+++ b/index.html
@@ -310,10 +310,10 @@
         <!---footer-menu---->
         <ul class="footer-menu">
             <li><a href="men/men.html" class="bg">Homens</a></li>
-            <li><a href="#" class="bg">Mulheres</a></li>
-            <li><a href="#" class="bg">Crianças</a></li>
-            <li><a href="#" class="bg">Tênis</a></li>
-            <li><a href="#" class="bg">Camisas</a></li>
+            <li><a href="" class="bg">Mulheres</a></li>
+            <li><a href="" class="bg">Crianças</a></li>
+            <li><a href="" class="bg">Tênis</a></li>
+            <li><a href="" class="bg">Camisas</a></li>
         </ul>
     </footer>
 
