--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <!--main-text------------>
         <div class="main-text">
             <h1>
-                <font>Brevimente</font>
+                <font>Brevimente allskiin</font>
             </h1>
             <h2>2022
             </h2>
